--- a/src/co/commit/SeatBookingpanel.form
+++ b/src/co/commit/SeatBookingpanel.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="co.combind.SeatBookingpanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="co.commit.SeatBookingpanel">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -122,6 +122,7 @@
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
@@ -160,6 +161,7 @@
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
